# familytree

./: .gitignore  README.md
backend/: .cursorrules  .gitignore  pyproject.toml
backend/family/: admin.py  models.py  serializers.py  urls.py  views.py
backend/family/management/commands/: seed_family_data.py
backend/family/migrations/: 0001_initial.py
backend/familytree/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: routeTree.gen.ts
frontend/src/components/: Header.tsx
frontend/src/lib/: api.ts
frontend/src/routes/: add.tsx  edit.$personId.tsx  index.tsx  people.tsx  person.$personId.tsx  search.tsx  tree.$personId.tsx
frontend/src/types/: family-chart.d.ts
