[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Benny Christanto",email = "niotech5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "djangorestframework (>=3.15.0,<4.0.0)",
    "django-cors-headers (>=4.3.0,<5.0.0)",
    "Pillow (>=10.0.0,<11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
